pk: Ensure we process the resources on the main thread

Can't access PackageKitBackend members from a separate thread.

BUG: 498787